# rust-bazel-starter

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  rust-project.json
docs/: rules_rust.md
proto/: rust_proto_gen.bzl
proto/common/v1/: BUILD.bazel  common.proto
proto/configuration/v1/: BUILD.bazel  configuration.proto
proto/configuration_service/v1/: BUILD.bazel  configuration_service.proto
proto/group_object/v1/: BUILD.bazel  group_object.proto
proto/group_object_service/v1/: BUILD.bazel  group_object_service.proto
rust/direct_messenger/: BUILD.bazel  direct_messenger.rs
rust/grpc_server/: BUILD.bazel  main.rs  messenger.rs  shutdown_utils.rs
rust/grpc_server/services/: configuration_service.rs  group_object_service.rs  mod.rs
