load("//:proto/rust_proto_gen.bzl", "crate_mapping_dep", "rust_proto_gen")

rust_proto_gen(
    name = "group_object_service_proto",
    srcs = ["group_object_service.proto"],
    crate_mapping = [
        crate_mapping_dep(
            "common_proto",
            ["common/v1/common.proto"],
        ),
        crate_mapping_dep(
            "group_object_proto",
            ["group_object/v1/group_object.proto"],
        ),
    ],
    grpc = True,
    mod = "group_object_service",
    proto_dir = "proto/group_object_service/v1",
    deps = [
        "//proto/common/v1:common_proto",
        "//proto/group_object/v1:group_object_proto",
    ],
)
